# GameOfLife

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Canvas.cpp  Canvas.h  GameOfLife  GameOfLife.cbp  Makefile  cmake_install.cmake  d3.life  intpow.cpp  intpow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
GameOfLife_autogen/: mocs_compilation.cpp
GameOfLife_autogen/2M4IF6KQHC/: moc_CoordsPanel.cpp  moc_CoordsPanel.cpp.d  moc_Panel.cpp  moc_Panel.cpp.d
GameOfLife_autogen/EWIEGA46WW/: moc_Canvas.cpp  moc_Canvas.cpp.d  moc_Thread.cpp  moc_Thread.cpp.d  moc_mainwindow.cpp.d
GameOfLife_autogen/NLOY5YBGEN/: moc_Life.cpp  moc_Life.cpp.d  moc_Thread.cpp  moc_Thread.cpp.d  moc_Worker.cpp  moc_Worker.cpp.d
io/: io.cpp  io.h
model/: Classic.cpp  Classic.h  Life.cpp  Life.h  Thread.cpp  Thread.h  Worker.cpp  Worker.h  life.go  life.h
panel/: CoordsPanel.cpp  CoordsPanel.h  Panel.cpp  Panel.h  coords.ui  panel.ui  ui_coords.h  ui_panel.h
reader/: reader.cpp  reader.h
tmp/: CMakeCache.txt
utils/: permutation.cpp  permutation.h
view/: Camera.cpp  Camera.h  Shader.cpp  Shader.h
